--- a/main-2.html
+++ b/main-2.html
@@ -513,7 +513,7 @@
                 position: static;
                 height: auto;
             }
-        }
+        }   
     </style>
 </head>
 
@@ -537,7 +537,7 @@
         </div>
     </aside>
 
-    <div class="main-container">
+   <div class="main-container">
         <main class="main-content">
             <header style="padding-bottom:8px">
                 <div class="flex" style="align-items:center; gap: 16px;">
@@ -553,9 +553,9 @@
                 <div class="events-grid">
                     <div class="card green">
                         <div class="flex-col gap-2">
-                            <div class="flex" style="align-items:center; gap:10px;">
-                                <div class="icon-round">✓</div>
-                                <div style="flex:1">
+                            <div style="align-items:center; gap:10px;">
+                                <div class="icon-round"><img src="assets/a.png"></div>
+                                <div style="flex:1; margin: 4px;">
                                     <div style="font-size:12px;font-weight:700">UDZN - Vyvidh '24</div>
                                     <div style="font-size:11px;opacity:.9">UI design hackathon</div>
                                 </div>
@@ -565,9 +565,9 @@
                     </div>
                     <div class="card blue">
                         <div class="flex-col gap-2">
-                            <div class="flex" style="align-items:center; gap:10px;">
-                                <div class="icon-round">★</div>
-                                <div>
+                            <div  style="align-items:center; gap:10px;">
+                                <div class="icon-round"><img src="assets/b.png"></div>
+                                <div style="margin: 4px;">
                                     <div style="font-weight:700">Sandshores '24</div>
                                     <div style="font-size:11px">Website dev hackathon</div>
                                 </div>
@@ -577,10 +577,10 @@
                     </div>
                     <div class="card purple">
                         <div class="flex-col gap-2">
-                            <div class="flex" style="align-items:center; gap:10px;">
-                                <div class="icon-round">✦</div>
-                                <div>
-                                    <div style="font-weight:700">Designathon '24</div>
+                            <div  style="align-items:center; gap:10px;">
+                                <div class="icon-round"><img src="assets/c.png"></div>
+                                <div style="margin: 2px;">
+                                    <div style="font-weight:600">Designathon '24</div>
                                     <div style="font-size:11px">UX design competition</div>
                                 </div>
                             </div>
@@ -589,9 +589,9 @@
                     </div>
                     <div class="card orange">
                         <div class="flex-col gap-2">
-                            <div class="flex" style="align-items:center; gap:10px;">
-                                <div class="icon-round">⛱</div>
-                                <div>
+                            <div  style="align-items:center; gap:10px;">
+                                <div class="icon-round"><img src="assets/d4.png"></div>
+                                <div style="margin: 4px;">
                                     <div style="font-weight:700">CodeStorm '24</div>
                                     <div style="font-size:11px">Beach side hackathon</div>
                                 </div>
@@ -601,9 +601,9 @@
                     </div>
                     <div class="card pink">
                         <div class="flex-col gap-2">
-                            <div class="flex" style="align-items:center; gap:10px;">
-                                <div class="icon-round">📱</div>
-                                <div>
+                            <div  style="align-items:center; gap:10px;">
+                                <div class="icon-round"><img src="assets/e.png"></div>
+                                <div style="margin: 4px;">
                                     <div style="font-weight:700">PES HACKS '24</div>
                                     <div style="font-size:11px">App dev hackathon</div>
                                 </div>
@@ -613,9 +613,9 @@
                     </div>
                     <div class="card red">
                         <div class="flex-col gap-2">
-                            <div class="flex" style="align-items:center; gap:10px;">
-                                <div class="icon-round">🎨</div>
-                                <div>
+                            <div  style="align-items:center; gap:10px;">
+                                <div class="icon-round"><img src="assets/f.png"></div>
+                                <div style="margin: 4px;">
                                     <div style="font-weight:700">Designathon</div>
                                     <div style="font-size:11px">NID designathon 2024</div>
                                 </div>
@@ -664,6 +664,7 @@
                                 <div
                                     style="width:20px;height:20px;background:#2C7A4B;border-radius:50%;display:flex;align-items:center;justify-content:center;color:white;font-size:10px">
                                     Q</div>
+                                    <div>+<strong style="font-size:20px"></strong></div>
                             </div>
                             <div class="flex gap-2" style="align-items:center;color:var(--muted);font-size:12px">
                                 <div>🔁 <strong style="font-size:11px">2</strong></div>
@@ -690,6 +691,7 @@
                                 <div
                                     style="width:20px;height:20px;background:#2C7A4B;border-radius:50%;display:flex;align-items:center;justify-content:center;color:white;font-size:10px">
                                     Q</div>
+                                    <div>+<strong style="font-size:20px"></strong></div>
                             </div>
                             <div class="flex gap-2" style="align-items:center;color:var(--muted);font-size:12px">
                                 <div>🔁 <strong style="font-size:11px">2</strong></div>
@@ -716,6 +718,7 @@
                                 <div
                                     style="width:20px;height:20px;background:#2C7A4B;border-radius:50%;display:flex;align-items:center;justify-content:center;color:white;font-size:10px">
                                     Q</div>
+                                    <div>+<strong style="font-size:20px"></strong></div>
                             </div>
                             <div class="flex gap-2" style="align-items:center;color:var(--muted);font-size:12px">
                                 <div>🔁 <strong style="font-size:11px">2</strong></div>
@@ -732,7 +735,7 @@
                         <div class="flex gap-2" style="align-items:center;">
                             <div style="background:#FFEAF6; color:#FF4DA6; padding:6px 8px; border-radius:999px; font-weight:600; font-size:12px;">4 Days left</div>
                             <div style="font-size:12px;color:var(--muted)">Freelancing</div>
-                            <div style="display:flex;align-items:center;gap:6px">
+                            <div style="display:flex;align-items:center;gap:2px">
                                 <img src="https://api.builder.io/api/v1/image/assets/TEMP/830a27c0761c4cd7f48c0f5c03145ba6b9a8aa69?width=40"
                                     alt=""
                                     style="width:20px;height:20px;border-radius:50%;border:2px solid white" />
@@ -742,6 +745,7 @@
                                 <div
                                     style="width:20px;height:20px;background:#2C7A4B;border-radius:50%;display:flex;align-items:center;justify-content:center;color:white;font-size:10px">
                                     Q</div>
+                                    <div>+<strong style="font-size:20px"></strong></div>
                             </div>
                             <div class="flex gap-2" style="align-items:center;color:var(--muted);font-size:12px">
                                 <div>🔁 <strong style="font-size:11px">2</strong></div>
@@ -817,30 +821,30 @@
                     <div class="flex flex-col gap-2">
                         <div class="flex" style="align-items:center;gap:12px">
                             <div style="width:30px">Java</div>
-                            <div class="flex gap-2" style="flex:1;">
-                                <div class="progress-bar" style="flex:1"><i style="width:100%; background:#2266FF;"></i></div>
-                                <div class="progress-bar" style="flex:1"><i style="width:0%; background:#2266FF;"></i></div>
+                            <div class="flex gap-4" style="flex:1; margin-left: 20px;">
+                                <div class="progress-bar" style="flex:1"><i style="width:45%; background:#7B3AEA;"></i></div>
+                                <div class="progress-bar" style="flex:1"><i style="width:0%; background:#7B3AEA;"></i></div>
                             </div>
                         </div>
-                        <div class="flex" style="align-items:center;gap:12px">
+                        <div class="flex" style="align-items:center;gap:12px; ">
                             <div style="width:40px">Python</div>
-                            <div class="flex gap-2" style="flex:1;">
-                                <div class="progress-bar" style="flex:1"><i style="width:100%; background:#2266FF;"></i></div>
-                                <div class="progress-bar" style="flex:1"><i style="width:0%; background:#2266FF;"></i></div>
+                            <div class="flex gap-2" style="flex:1; margin-left: 10px;">
+                                <div class="progress-bar" style="flex:1"><i style="width:55%; background:#7B3AEA;"></i></div>
+                                <div class="progress-bar" style="flex:1"><i style="width:0%; background:#7B3AEA;"></i></div>
                             </div>
                         </div>
                         <div class="flex" style="align-items:center;gap:12px">
                             <div style="width:60px">JS</div>
-                            <div class="flex gap-2" style="flex:1;">
-                                <div class="progress-bar" style="flex:1"><i style="width:100%; background:#2266FF;"></i></div>
-                                <div class="progress-bar" style="flex:1"><i style="width:0%; background:#2266FF;"></i></div>
+                            <div class="flex gap-2" style="flex:1; margin-left: -9px;">
+                                <div class="progress-bar" style="flex:1"><i style="width:70%; background:#7B3AEA;"></i></div>
+                                <div class="progress-bar" style="flex:1"><i style="width:0%; background:#7B3AEA;"></i></div>
                             </div>
                         </div>
                         <div class="flex" style="align-items:center;gap:12px">
                             <div style="width:30px">React  </div>
-                            <div class="flex gap-3" style="flex:1;">
-                                <div class="progress-bar" style="flex:1"><i style="width:100%; background:#2266FF;"></i></div>
-                                <div class="progress-bar" style="flex:1"><i style="width:0%; background:#2266FF;"></i></div>
+                            <div class="flex gap-3" style="flex:1; margin-left: 20px;">
+                                <div class="progress-bar" style="flex:1"><i style="width:20%; background:#7B3AEA;"></i></div>
+                                <div class="progress-bar" style="flex:1"><i style="width:0%; background:#7B3AEA;"></i></div>
                             </div>
                         </div>
                     </div>
@@ -1026,7 +1030,7 @@
                             Compiler Design Module 1.pdf</div>
                         <div style="font-size:11px;color:var(--muted)">CST 302</div>
                     </div>
-                    <div style="width: 23px;"><img src="assets/52.PNG" style="width: 23px;"> </div>
+                    <div style="width: 23px;"><img src="assets/download.PNG" style="width: 23px;"> </div>
                 </div>
                 <div style="margin-top:12px;display:flex;align-items:center;gap:8px">
                     <strong>View all</strong> <span style="opacity:.6">→</span>
@@ -1042,13 +1046,13 @@
                         <div style="opacity:.7"><img src="assets/2.PNG" style="width: 30px;"></div>
                     </a>
                     <a href="https://drive.google.com/">
-                        <div style="opacity:.7"><img src="assets/3.PNG" style="width: 30px;"></div>
+                        <div style="opacity:.7"><img src="assets/3.PNG" style="width: 27px;"></div>
                     </a>
                     <a href="https://www.youtube.com/">
                         <div style="opacity:.7"><img src="assets/4.PNG" style="width: 30px;"></div>
                     </a>
                     <a href="https://www.instagram.com/">
-                        <div style="opacity:.7"><img src="assets/5.PNG" style="width: 30px;"></div>
+                        <div style="opacity:.7"><img src="assets/5.PNG" style="width: 27px;"></div>
                     </a>
                     <a href="https://www.messenger.com/">
                         <div style="opacity:.7"><img src="assets/6.PNG" style="width: 30px;"></div>
